Migrate to Paper 26.2 and stop holding images in memory
The plugin kept every source image decoded in a cache that was never
evicted, and each renderer additionally held a getSubimage() view into
that image, which pins the parent raster even when the cache is cleared.
Memory therefore scaled with the total resolution of all placed images
and could not be reclaimed. On top of that every map was loaded during
startup, on the main thread.

Images are now converted to map colours once and the result is stored on
disk, one 16 KiB file per map, in the plugin's cache folder. A renderer
holds no image data at all: it requests its tile asynchronously on the
first render, draws it on the next one and drops the reference again.
Renderers are attached from MapInitializeEvent instead of during startup,
so a map costs nothing until the server actually loads it.

Drawing now happens inside render() rather than from a scheduled task.
Writing to a canvas outside of a render call is what left images blank
until a player rejoined.

Paper 26.2 migration:
- build against io.papermc.paper:paper-api, Java 25, api-version 26.2
- replace the BungeeCord chat API, which the Paper API no longer ships,
  with Adventure components
- drop the CLCore dependency, which lived in an authenticated GitHub
  Packages repository and made the project unbuildable for anyone else
- remove the server version checks. They compared the minor version
  against 14/16/17, so on 26.2 they reported invisible frames, glowing
  frames, floor placement and tracking control as unsupported

Other changes:
- add /imagemap bake to convert images ahead of time
- read image resolutions from the file header instead of decoding
- resolve image file names ignoring case
- support quoted file names, as used by the clickable list output
- fix the reload command checking imagemap.reload instead of
  imagemaps.reload
- fix /imagemap list defaulting to page 0
- replace the deprecated metadata and URL APIs