@@ -1,8 +1,7 @@
 package net.craftcitizen.imagemaps;
 
-import de.craftlancer.core.LambdaRunnable;
-import de.craftlancer.core.util.MessageLevel;
-import de.craftlancer.core.util.MessageUtil;
+import net.craftcitizen.imagemaps.util.MessageLevel;
+import net.craftcitizen.imagemaps.util.MessageUtil;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 
@@ -12,9 +11,11 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.util.logging.Level;
 
 public class ImageMapDownloadCommand extends ImageMapSubCommand {
 
@@ -23,100 +24,95 @@ public class ImageMapDownloadCommand extends ImageMapSubCommand {
     }
 
     @Override
-    protected String execute(CommandSender sender, Command cmd, String label, String[] args) {
-        if (!checkSender(sender)) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "You can't run this command.");
-            return null;
-        }
-
+    protected void execute(CommandSender sender, Command cmd, String label, String[] args) {
         if (args.length < 3) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
+            MessageUtil.sendMessage(sender, MessageLevel.WARNING,
                                     "You must specify a file name and a download link.");
-            return null;
+            return;
         }
 
         String filename = args[1];
         String url = args[2];
 
         if (filename.contains("/") || filename.contains("\\") || filename.contains(":")) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Filename contains illegal character.");
-            return null;
+            MessageUtil.sendMessage(sender, MessageLevel.WARNING, "Filename contains illegal character.");
+            return;
         }
 
-        new LambdaRunnable(() -> download(sender, url, filename)).runTaskAsynchronously(plugin);
-        return null;
+        getPlugin().getServer().getAsyncScheduler().runNow(getPlugin(), task -> download(sender, url, filename));
     }
 
     private void download(CommandSender sender, String input, String filename) {
         try {
-            URL srcURL = new URL(input);
+            URL srcURL = new URI(input).toURL();
 
             if (!srcURL.getProtocol().startsWith("http")) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Download URL is not valid.");
+                MessageUtil.sendMessage(sender, MessageLevel.WARNING, "Download URL is not valid.");
                 return;
             }
 
             URLConnection connection = srcURL.openConnection();
 
-            if (!(connection instanceof HttpURLConnection)) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Download URL is not valid.");
+            if (!(connection instanceof HttpURLConnection http)) {
+                MessageUtil.sendMessage(sender, MessageLevel.WARNING, "Download URL is not valid.");
                 return;
             }
 
-            connection.setRequestProperty("User-Agent", "ImageMaps/0");
+            http.setRequestProperty("User-Agent", "ImageMaps/2");
 
-            if (((HttpURLConnection) connection).getResponseCode() != 200) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
+            if (http.getResponseCode() != 200) {
+                MessageUtil.sendMessage(sender, MessageLevel.WARNING,
                                         String.format("Download failed, HTTP Error code %d.",
-                                                      ((HttpURLConnection) connection).getResponseCode()));
+                                                      http.getResponseCode()));
                 return;
             }
 
-            String mimeType = connection.getHeaderField("Content-type");
-            if (!(mimeType.startsWith("image/"))) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                        String.format("Download is a %s file, not image.", mimeType));
+            String mimeType = http.getHeaderField("Content-type");
+
+            if (mimeType == null || !mimeType.startsWith("image/")) {
+                MessageUtil.sendMessage(sender, MessageLevel.WARNING,
+                                        String.format("Download is a %s file, not an image.", mimeType));
                 return;
             }
 
-            try (InputStream str = connection.getInputStream()) {
+            try (InputStream str = http.getInputStream()) {
                 BufferedImage image = ImageIO.read(str);
+
                 if (image == null) {
-                    MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                            "Downloaded file is not an image!");
+                    MessageUtil.sendMessage(sender, MessageLevel.WARNING, "Downloaded file is not an image!");
                     return;
                 }
 
-                File outFile = new File(plugin.getDataFolder(), "images" + File.separatorChar + filename);
+                File outFile = new File(getPlugin().getImagesDir(), filename);
                 boolean fileExisted = outFile.exists();
                 ImageIO.write(image, "PNG", outFile);
+                image.flush();
 
                 if (fileExisted) {
-                    MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING,
-                                            "File already exists, overwriting!");
-                    getPlugin().reloadImage(filename);
+                    MessageUtil.sendMessage(sender, MessageLevel.WARNING, "File already exists, overwriting!");
+                    getPlugin().getServer().getGlobalRegionScheduler()
+                               .run(getPlugin(), task -> getPlugin().reloadImage(filename));
                 }
             }
-            catch (IllegalArgumentException ex) {
-                MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Received no data");
+            catch (IllegalArgumentException e) {
+                MessageUtil.sendMessage(sender, MessageLevel.WARNING, "Received no data");
                 return;
             }
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.NORMAL, "Download complete.");
+
+            MessageUtil.sendMessage(sender, MessageLevel.NORMAL, "Download complete.");
         }
-        catch (MalformedURLException ex) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.WARNING, "Malformatted URL");
+        catch (URISyntaxException | IllegalArgumentException e) {
+            MessageUtil.sendMessage(sender, MessageLevel.WARNING, "Malformatted URL");
         }
-        catch (IOException ex) {
-            MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.ERROR,
-                                    "An IO Exception happened, see server log");
-            ex.printStackTrace();
+        catch (IOException e) {
+            MessageUtil.sendMessage(sender, MessageLevel.ERROR, "An IO Exception happened, see server log");
+            getPlugin().getLogger().log(Level.SEVERE, "Failed to download " + filename, e);
         }
     }
 
     @Override
     public void help(CommandSender sender) {
-        MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.NORMAL, "Downloads an image from an URL.");
-        MessageUtil.sendMessage(getPlugin(), sender, MessageLevel.INFO,
-                                "Usage: /imagemap download <filename> <sourceURL>");
+        MessageUtil.sendMessage(sender, MessageLevel.NORMAL, "Downloads an image from an URL.");
+        MessageUtil.sendMessage(sender, MessageLevel.INFO, "Usage: /imagemap download <filename> <sourceURL>");
     }
 }
